<resources>
    <string name="app_name">GHAS알리미</string>
    <string name="default_notification_channel_id">meal_notifications</string>
    <string name="meal_notification_channel_name">급식 알림</string>
    <string name="meal_notification_channel_description">급식과 학교 생활 정보를 알려드립니다.</string>
    <string name="timetable_notification_channel_name">시간표 알림</string>
    <string name="timetable_notification_channel_description">오늘 시간표를 알려드립니다.</string>
    <string name="school_notice_notification_channel_name">학교 공지 알림</string>
    <string name="school_notice_notification_channel_description">학교 공지 정보를 알려드립니다.</string>
    <string name="meal_notification_title">급식 알림</string>
    <string name="meal_notification_body_fallback">오늘 급식을 확인해보세요.</string>
    <string name="timetable_notification_title">시간표 알림</string>
    <string name="timetable_notification_body_fallback">오늘 시간표를 확인해보세요.</string>
    <string name="school_notice_notification_title">학교 공지 알림</string>
    <string name="school_notice_notification_body_fallback">오늘 학교 공지를 확인해보세요.</string>
    <string name="notification_permission_denied">알림 권한이 없어 알림을 받을 수 없습니다.</string>
    <string name="notification_enabled">알림 설정이 완료되었습니다.</string>
    <string name="notification_disabled">알림을 취소했습니다.</string>
    <string name="notification_settings_button">알림 설정</string>
    <string name="notification_settings_title">알림 설정</string>
    <string name="notification_settings_hint">필요한 알림만 선택해 받을 수 있습니다.</string>
    <string name="notification_enable_all">모든 알림 켜기</string>
    <string name="notification_disable_all">모든 알림 끄기</string>
    <string name="notification_master_enabled">전체 알림</string>
    <string name="notification_meal_enabled">급식 알림</string>
    <string name="notification_timetable_enabled">시간표 알림</string>
    <string name="notification_school_notice_enabled">학교 공지 알림</string>
    <string name="notification_meal_time">급식 알림 시간</string>
    <string name="notification_timetable_time">시간표 알림 시간</string>
    <string name="notification_school_notice_time">학교 공지 알림 시간</string>
    <string name="notification_time_format">%1$s: %2$s</string>
    <string name="notification_time_editor_title">알림 시간 설정</string>
    <string name="notification_time_hour">시간</string>
    <string name="notification_time_minute">분</string>
    <string name="notification_time_am">오전</string>
    <string name="notification_time_pm">오후</string>
    <string name="notification_time_hour_hint">7</string>
    <string name="notification_time_minute_hint">30</string>
    <string name="notification_time_confirm">확인</string>
    <string name="notification_time_required">시간과 분을 입력해 주세요.</string>
    <string name="notification_time_invalid">시간은 1~12, 분은 0~59 사이여야 합니다.</string>
    <string name="notification_settings_save">저장</string>
    <string name="notification_settings_cancel">취소</string>
    <string name="external_link_error">이 링크를 열 수 없습니다.</string>
    <string name="share_action">공유하기</string>
    <string name="widget_today_meal_title">오늘 급식</string>
    <string name="widget_today_meal_description">오늘 중식을 홈 화면에서 바로 확인합니다.</string>
    <string name="widget_today_meal_loading">급식을 불러오는 중...</string>
    <string name="widget_today_meal_empty">오늘 등록된 급식이 없어요</string>
    <string name="widget_today_meal_error">급식을 불러오지 못했어요</string>
    <string name="widget_today_meal_refresh">↻</string>
    <string name="widget_today_timetable_title">오늘 시간표</string>
    <string name="widget_today_timetable_description">오늘 시간표를 홈 화면에서 바로 확인합니다.</string>
    <string name="widget_today_timetable_loading">시간표를 불러오는 중...</string>
    <string name="widget_today_timetable_empty">오늘 등록된 시간표가 없어요</string>
    <string name="widget_today_timetable_error">시간표를 불러오지 못했어요</string>
    <string name="widget_today_timetable_not_configured">앱에서 학년과 반을 먼저 설정해 주세요</string>
    <string name="widget_today_timetable_class_format">%1$s학년 %2$s반</string>
    <string name="widget_today_timetable_period_format">%d교시</string>
</resources>
